create other collection and added to swagger
