# contact-directory/routes/index.js
@@ -7,6 +7,7 @@ router.get('/', (req, res) => {
     res.send('Hello World');
 });
 router.use('/contacts', require('./contacts'));
+router.use('/clients', require('./clients'));
 
 
 module.exports = router;
